--- a/css/intro-to-css.css
+++ b/css/intro-to-css.css
@@ -8,38 +8,53 @@ h1 - element selector, general rule
 #anyname - id selector, for SPECIFIC things, only use to address one rule
 https://www.w3schools.com/cssref/css_selectors.asp
 */
+/*making a list, applies the rule to multiple elements:
+h1, h2, h3, h4 {
+color: gray;
+}*/
+/*if you find yourself copying the style in multiple elements, group them together.*/
+/* a , between , elements, means "this, that ... this or that -- but if no punctuation means they're descendents.*/
+/* select all #anyidname > li */
+/*see if there are ways to avoid the quick ID or class solutions.*/
+body {
+    font-family: Sans-serif;
+    background-color: #4e9c6b;
+    color:whitesmoke;
+    text-align: center;
+}
+a, nav {
+    color: #4e9c6b;
+    background-color: honeydew;
+}
 
-/*body {*/
-/*    background-color: darkseagreen;*/
-/*    color:whitesmoke;*/
-/*    text-align: center;*/
-/*}*/
-/*a {*/
-/*    color: darkseagreen;*/
-/*    background-color: honeydew;*/
-/*}*/
-/*nav {*/
-/*    background-color: honeydew;*/
-/*}*/
-/*main {*/
-/*    background-color: honeydew;*/
-/*    color: darkseagreen;*/
-/*    font-family: Arial;*/
-/*}*/
-/*hr {*/
-/*    border-style: solid;*/
-/*    border-width: 1px;*/
-/*    border-color: honeydew;*/
-/*}*/
+hr {
+    background-color: honeydew;
+    border-style: solid;
+    border-width: 20px;
+    border-color: honeydew;
+}
+.theMain {
+    background-color: honeydew;
+    color: #547a4b;
+    font-family: Arial;
+}
+.programming {
+    color: rgba(00,00,00,00);
+}
+.fancy-header {
+    font-family: Monaco;
+    color: #4e9c6b;
+    background-color: honeydew;
 
-/*.fancy-header {*/
-/*    font-family: cursive;*/
-/*    color: darkseagreen;*/
-/*    background-color: honeydew;*/
+}
 
-/*}*/
-
-/*a:hover {*/
-/*    color: honeydew;*/
-/*    background-color: darkseagreen;*/
-/*}*/
+a:hover {
+    color: honeydew;
+    text-decoration: underline overline;
+    background-color: #4e9c6b;
+}
+a:active {
+    color: honeydew;
+    text-decoration: underline;
+    background-color:beige;
+}
