--- a/css/selectors.css
+++ b/css/selectors.css
@@ -1,5 +1,6 @@
 /* selector for id="container" */
 #container {
+    /*margin: top right bottom left . if top and bottom same and left and right are the same just two ;*/
     margin: 50px auto;
     width: 500px;
     padding: 10px;
@@ -8,7 +9,7 @@
 /*  selector for all "h1" elements
     that are a descendent of id="container"
     and have a class of "fancy-header" */
-#container .fancy-header {
+#container h1.fancy-header {
     color: blue;
     text-decoration: underline;
 }
@@ -25,7 +26,7 @@ em {
 
 /*  selector for all "anchor" elements
     that are a direct child of an element with class="article" */
-a {
+.article > a {
     float:right;
 }
 
