--- a/css/login.css
+++ b/css/login.css
@@ -14,35 +14,40 @@ form {
     /* This form should be separated from other elements by 1em */
     /* There must be 1em between the content and the border of this element */
     margin: 5px;
-    border: 5px;
-    padding: 5px;
+    border: 1em;
+    padding: 1em;
 }
 
 fieldset {
     -webkit-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
-    background: white;
-    padding: 16px;
+    /*no difference between background-color and background*/
+    padding: 1em;
     /* There must be 1em between the content and the border of this element */
     /* It should have no border */
+    border: none;
     /* Its background should be white */
+    background: white;
 }
 
 .width-80 {
-    width: 80%;
-    margin: auto;
     /* The element with this class should be 80% of the width and it must be centered */
+    width: 80%;
     /* Read how to center elements with margin here: http://learnlayout.com/margin-auto.html*/
+    margin: 0 auto;
+/*    adding 0 will only auto margin the left and right not top and bottom*/
 }
 
 .form-group {
-    width: 100%;
-    padding-top: .5em;
-    padding-bottom: .5em;
-
     /* This element must use 100% of the width */
+    width: 100%;
     /* It should have a separation of .5em from elements on top of it and below it*/
+    margin: .5em 0;
+    /*none .5em top &bottom none for left & right*/
+    /*padding-top: .5em; was not correct*/
+    /*padding-bottom: .5em;*/
+
 }
 
 .form-label {
@@ -56,28 +61,26 @@ fieldset {
 }
 
 .btn {
-    /* There must be a separation of 8px between the text and the border of this element */
-    /* The text color of this element should be white and bold */
-    /* The border of this element should be 1px, and its color should be light grey */
-    padding: 8px;
     background-color: #0fb784;
+    /* There must be a separation of 8px between the text and the border of this element */
+    padding: 8px;
+    /* The text color of this element should be white and bold */
     color: white;
-    border: 1px lightgrey;
     font-weight: bold;
+    /* The border of this element should be 1px, and its color should be light grey */
+    border: 1px lightgrey;
 }
 
 .form-control {
     /* There must be 4px on top of the text and below the text of an input with this class */
+    padding: 4px 0;
     /* It should have a separation of .5em from elements on top of it and below it */
+    margin: .5em 0;
 
     /* You'll need to use the `calc` function to make the width of this element match the width of the button */
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    margin-top: .5em;
-    margin-bottom: .5em;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    width: 100%;
+    width: calc(100% - 4px);
 }
 
 
