--- a/css/messages.css
+++ b/css/messages.css
@@ -5,3 +5,26 @@ body, html {
     margin: 0;
     font-family: Arial, Ubuntu, sans-serif;
 }
+.message {
+    border-radius: .3em;
+    border: 1px solid #dfdada;
+    margin-bottom: .5em;
+    width: 80%;
+    padding: .5em;
+}
+.message-info:hover {
+    color: #4D499E;
+    background: #D1DEFC;
+}
+.message-success:hover {
+    color: darkgreen;
+    background: #c7ead2;
+}
+.message-warning:hover {
+    color: darkgoldenrod;
+    background: #FDFBCE;
+}
+.message-error:hover {
+    color: maroon;
+    background: #f1cbcf;
+}
