--- a/css/flexbox-fundamentals-exercise.css
+++ b/css/flexbox-fundamentals-exercise.css
@@ -105,9 +105,7 @@ section:nth-of-type(3) h3 {
     width: 5em;
     background: brown;
     /* enter needed declarations here */
-    justify-content: space-around;
-    align-content: center;
-    align-items: center;
+    flex-grow: 1;
 }
 
 .large-brown-box:nth-of-type(2) {
@@ -115,6 +113,7 @@ section:nth-of-type(3) h3 {
 }
 
 section:nth-of-type(5) {
+    justify-content: space-evenly;
     /* enter needed declarations here */
 }
 
