--- a/css/flexbox-cards.css
+++ b/css/flexbox-cards.css
@@ -19,10 +19,13 @@ a {
 .container {
     max-width: 750px;
     margin: 0 auto;
+    display: flex;
+    align-items: center;
     /* TODO: Make this a flex container and align it's items to the center*/
 }
 
 .card {
+    flex-basis: 100%;
     background: rgba(255, 255, 255, 0.2);
     margin: 20px;
     padding: 20px;
