--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -4,26 +4,42 @@
     body {
         background-color: pink;
     }
+    /*this is for the date and time.*/
     section.everyCard>span:nth-of-type(1) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    /*this is for the word temperature*/
+    section.everyCard>span:nth-of-type(2) {
         display: none;
     }
+    /*this is for the temperature numbers.*/
     section.everyCard>b:nth-of-type(1) {
        font-size: 3em;
     }
     #map {
-        height: 50vh;
-        margin-top: -70em;
+        height:400px;
+        width: 90%;
+        margin: auto 0;
+        /*margin: 100px;*/
     }
     .everyCard {
+        max-width: 90%;
+        margin: auto;
         text-align: center;
         background-color: yellow;
     }
+    /*this hides the forecast in mobile view*/
     .everyCard:nth-child(2), .everyCard:nth-child(3), .everyCard:nth-child(4), .everyCard:nth-child(5){
         visibility: hidden;
+        display: none;
+    /*    this gave me so many issues.
+     if  i did not put 'display: none', the map would act
+     as if the forecast were displaying.*/
     }
     .searchbarSection {
         max-width: 90%;
-        margin: auto;
-        margin-bottom: 1em;
+        margin: auto auto 1em;
     }
 }
